Firefox doesn't reuse cached responses for bugzilla.mozilla.org
Categories
(Core :: Networking: Cache, defect, P2)
Tracking
()
People
(Reporter: 6k64x4ma, Assigned: smayya)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression, Whiteboard: [necko-triaged][necko-priority-queue])
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/110.0
Steps to reproduce:
- Launch Firefox with a new profile.
- Set
network.http.rcwn.enabledto false. - Go to https://bugzilla.mozilla.org/home
- Open the Network Inspector.
- Click the link to https://bugzilla.mozilla.org/home
Actual results:
- Firefox doesn't use the
If-Modified-SinceorIf-None-Matchrequest headers. - This is not a recent regression. I can reproduce this on Firefox 60.
Expected results:
- Firefox should send conditional requests.
Comment 1•3 years ago
|
||
Thanks for the report.
Indeed, there seems to have been a regression at some point.
This is as far as mozregression can go:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=c3f5e6079284a7b7053c41f05d0fe06ff031db03&tochange=5a2deb5a9b09df9ad2ca3ac1d0c480be250d31e4
Best candidates are Bug 1267474 and bug Bug 669259
Updated•3 years ago
|
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
Comment 2•3 years ago
|
||
Based on comment #1, this bug contains a bisection range found by mozregression. However, the Regressed by field is still not filled.
:smayya, if possible, could you fill the Regressed by field and investigate this regression?
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 3•3 years ago
|
||
Comment 4•3 years ago
|
||
Set release status flags based on info from the regressing bug 1267474
| Assignee | ||
Comment 5•3 years ago
|
||
Depends on D181044
Updated•3 years ago
|
Updated•3 years ago
|
Comment 7•3 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/c75fa383ab07
https://hg.mozilla.org/mozilla-central/rev/c7a752ac35e8
Comment 8•3 years ago
|
||
The patch landed in nightly and beta is affected.
:smayya, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox115towontfix.
For more information, please visit BugBot documentation.
Updated•3 years ago
|
Updated•3 years ago
|
Updated•3 years ago
|
Description
•