Bug 1812505 - conditional request must be sent for stale responses with immutable cache-control extension. r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D181044